// Copyright (c) 2024 Kyrylo Rud
// All rights reserved.
//
// Licensed under the Partitionless License (Version 1.0).
// See the LICENSE file in the project root or contact Kyrylo Rud
// at <krud.official@gmail.com> for details.

syntax = "proto3";

package partitionless.rpc;

service PublicGateway {
  rpc Authorize(AuthorizationRequest) returns (AuthorizationToken);
}

message AuthorizationToken {
    int32 version = 1;
    string client_id = 2;
    string key = 3;
    int64 timestamp = 4;
    string signature = 5;
}

message AuthorizationRequest {
  string client_id = 1;
  string signature = 2;
}

message Error {
    enum ErrorType {
        REGISTRATION_NOT_PERMITTED = 0;
        INVALID_SIGNATURE = 1;
        AUTHENTICATION_TOKEN_LIMIT_REACHED = 2;
    }

    ErrorType type = 1;
    string message = 2;
}
